rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
    - protocol: TCP
      targetPort: 5672
      port: 5672
  selector:
    app: rabbitmq
  clusterIP: None
